--- a/index.html
+++ b/index.html
@@ -16,6 +16,65 @@
 
 <body class="bg-dark">
     <header>
+      <nav class="navbar navbar-expand-lg navbar-dark mobile-navbar">
+        <div class="container d-flex justify-content-between align-items-center p-0">
+          <button class="navbar-toggler-mobile" id="open-menu" aria-label="Open menu">
+            <i class="bi bi-list"></i>
+          </button>
+          <span class="navbar-logo-mobile mx-auto d-lg-none"><!-- logo on mobile if wanted --></span>
+          <button class="navbar-search-mobile" id="open-search" aria-label="Search">
+            <i class="bi bi-search"></i>
+          </button>
+        </div>
+      </nav>
+      <!-- Overlay Nav -->
+      <div id="mobile-overlay" class="mobile-overlay">
+        <div class="mobile-overlay-header">
+          <button id="close-menu" class="close-menu-btn" aria-label="Close menu"><i class="bi bi-x"></i></button>
+          <form class="mobile-search-form" role="search">
+            <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+            <button type="submit" class="btn btn-light ms-2"><i class="bi bi-search"></i></button>
+          </form>
+        </div>
+        <ul class="mobile-nav-list">
+          <li><a href="index.html" class="mobile-nav-link">Home</a></li>
+          <li class="mobile-dropdown">
+            <button class="dropdown-toggle">Categories <i class="bi bi-chevron-down"></i></button>
+            <ul class="dropdown-list">
+              <li><a href="html/action.html">Action</a></li>
+              <li><a href="html/adventure.html">Adventure</a></li>
+              <li><a href="html/battle-royale.html">Battle Royale</a></li>
+              <li><a href="html/casual-party.html">Casual/Party</a></li>
+              <li><a href="html/fighting.html">Fighting</a></li>
+              <li><a href="html/indie.html">Indie</a></li>
+              <li><a href="html/metroidvania.html">Metroidvania</a></li>
+              <li><a href="html/mmorpg.html">MMORPG</a></li>
+              <li><a href="html/puzzle.html">Puzzle</a></li>
+              <li><a href="html/racing.html">Racing</a></li>
+              <li><a href="html/rhythm-music.html">Rhythm/Music</a></li>
+              <li><a href="html/roguelike.html">Roguelike/Roguelite</a></li>
+              <li><a href="html/rpg.html">RPG</a></li>
+              <li><a href="html/shooter.html">Shooter</a></li>
+              <li><a href="html/simulation-strategy.html">Simulation/Strategy</a></li>
+              <li><a href="html/sports.html">Sports</a></li>
+              <li><a href="html/survival-horror.html">Survival/Horror</a></li>
+              <li><a href="html/visual-novels.html">Visual Novels</a></li>
+            </ul>
+          </li>
+          <li class="mobile-dropdown">
+            <button class="dropdown-toggle">Consoles <i class="bi bi-chevron-down"></i></button>
+            <ul class="dropdown-list">
+              <li><a href="html/pc.html">PC (Windows)</a></li>
+              <li><a href="html/playstation5.html">PlayStation 5</a></li>
+              <li><a href="html/xbox-series.html">Xbox Series X|S</a></li>
+              <li><a href="html/switch.html">Nintendo Switch</a></li>
+              <li><a href="html/mobile.html">Mobile (iOS/Android)</a></li>
+              <li><a href="html/vr-ar.html">VR/AR</a></li>
+              <li><a href="html/cloud-gaming.html">Cloud Gaming</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
         
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
                 <div class="container d-flex justify-content-between align-items-center">
